changed settings for results gathering